@@ -3,11 +3,11 @@ package art.arcane.hiddenore.rules;
 import art.arcane.hiddenore.util.project.ToolTier;
 import org.bukkit.Material;
 
-import java.util.Collections;
 import java.util.List;
+import java.util.Objects;
 import java.util.Set;
 
-public class ItemDropRule {
+public final class ItemDropRule {
   public final DropType type;
   public final Material material;
   public final List<String> commands;
@@ -24,14 +24,14 @@ public class ItemDropRule {
 
   public ItemDropRule(Material material, double veinsPerChunk, int veinMinSize, int veinMaxSize, int minY, int maxY, boolean fortuneMultiplier, Set<ToolTier> toolTiers, int expDrop) {
     this.type = DropType.ITEM;
-    this.material = material;
+    this.material = Objects.requireNonNull(material, "material");
     this.commands = null;
     this.executionTarget = ExecutionTarget.CONSOLE;
     this.chance = 0.0;
     this.minY = minY;
     this.maxY = maxY;
     this.fortuneMultiplier = fortuneMultiplier;
-    this.toolTiers = toolTiers;
+    this.toolTiers = Set.copyOf(Objects.requireNonNull(toolTiers, "toolTiers"));
     this.veinsPerChunk = veinsPerChunk;
     this.veinMinSize = Math.max(1, veinMinSize);
     this.veinMaxSize = Math.max(this.veinMinSize, veinMaxSize);
@@ -41,13 +41,13 @@ public class ItemDropRule {
   public ItemDropRule(List<String> commands, double chance, int minY, int maxY, ExecutionTarget executionTarget) {
     this.type = DropType.COMMAND;
     this.material = null;
-    this.commands = commands;
+    this.commands = List.copyOf(Objects.requireNonNull(commands, "commands"));
     this.executionTarget = executionTarget != null ? executionTarget : ExecutionTarget.CONSOLE;
     this.chance = chance;
     this.minY = minY;
     this.maxY = maxY;
     this.fortuneMultiplier = false;
-    this.toolTiers = Collections.emptySet();
+    this.toolTiers = Set.of();
     this.veinsPerChunk = 0.0;
     this.veinMinSize = 0;
     this.veinMaxSize = 0;
@@ -58,11 +58,12 @@ public class ItemDropRule {
     if (type != DropType.ITEM || veinsPerChunk <= 0) {
       return 0.0;
     }
-    int yRange = maxY - minY + 1;
+    long yRange = (long) maxY - minY + 1L;
     if (yRange <= 0) {
       return 0.0;
     }
-    double expectedBlocksPerChunk = veinsPerChunk * (veinMinSize + veinMaxSize) / 2.0;
+    double averageVeinSize = ((double) veinMinSize + veinMaxSize) / 2.0;
+    double expectedBlocksPerChunk = veinsPerChunk * averageVeinSize;
     return expectedBlocksPerChunk / (256.0 * yRange);
   }
 
